name change and confs

--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Shapeworld, edit and convert shapefiles!">
+    <meta name="description" content="Shpworld, edit and convert shapefiles!">
     <meta name="author" content="Abdi Dahir">
     <link rel="icon" href="/lib/favicon.ico">
 
-    <title>Shapeworld! Create, edit and convert shapefiles!</title>
+    <title>Shpworld! Create, edit and convert shapefiles!</title>
 
     <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/lib/css/shapeworld.css" rel="stylesheet">
+    <link href="/lib/css/shpworld.css" rel="stylesheet">
     <link href="/lib/bootstrap-fileinput/css/fileinput.min.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -39,7 +39,7 @@
 
       <div class="jumbotron">
         <h1><span class="glyphicon glyphicon-globe"></span> ShapeWorld</h1>
-        <p class="lead">Upload your shp and dbf file along with optional prj and shx files and shapeworld will convert it to a geojson.</p>
+        <p class="lead">Upload your shp and dbf file along with optional prj and shx files and shpworld will convert it to a geojson.</p>
       </div>
 
       <div id="alert" class="fade-in"></div>
@@ -47,13 +47,13 @@
         <div class="col-lg-12">
             <div style="width: 100; text-align: center;  margin: 0px auto">
             <p> Here's <a href="http://abdi.dahir.ca">my personal site</a> if youre looking for info on me.</p>
-            <p> For support, send an email to support@shapeworld.com </p>
+            <p> For support, send an email to support@shpworld.com </p>
             </div>
         </div>
       </div>
 
       <footer class="footer">
-        <p>&copy; Shapeworld 2015</p>
+        <p>&copy; Shpworld 2015</p>
       </footer>
 
     </div> <!-- /container -->
