--- a/editor.html
+++ b/editor.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Shapeworld, edit and convert shapefiles!">
+    <meta name="description" content="Shpworld, edit and convert shapefiles!">
     <meta name="author" content="Abdi Dahir">
     <link rel="icon" href="/lib/favicon.ico">
 
-    <title>Shapeworld! Create, edit and convert shapefiles!</title>
+    <title>Shpworld! Create, edit and convert shapefiles!</title>
     <link rel="stylesheet" 
         href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="css/style.css" />
