--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,11 @@
             <li role="presentation" class="active"><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><span class="glyphicon glyphicon-globe"></span> ShapeWorld</h3>
+        <h3 class="text-muted"><span class="glyphicon glyphicon-globe"></span> ShpWorld</h3>
       </div>
 
       <div class="jumbotron">
-        <h1><span class="glyphicon glyphicon-globe"></span> ShapeWorld</h1>
+        <h1><span class="glyphicon glyphicon-globe"></span> ShpWorld</h1>
         <p class="lead">Upload your shp and dbf file along with optional prj and shx files and shpworld will convert it to a geojson.</p>
       </div>
 
