--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="/">Home</a></li>
             <li role="presentation"><a href="editor.html">Editor</a></li>
             <li role="presentation" class="active"><a href="#">Contact</a></li>
           </ul>
